--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "root": "github:Kyusung4698/diablosnaps#master",
     "tesseract.js": "^4.1.1"
   },
   "devDependencies": {
