--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@diablosnaps/assets": "^0.2.5",
     "@diablosnaps/common": "^0.2.5",
+    "buffer": "^6.0.3",
+    "leven": "^4.0.0",
     "tesseract.js": "^4.1.1"
   },
   "devDependencies": {
